Alter PathogenicityData 'get' prefixed methods to remove the 'get' e.g. getPredictedPathogenicityScores() is now pathogenicityScores(), getPredictedScore(PathogenicitySource source) -> pathogenicityScore(PathogenicitySource source), getScore() -> pathogenicityScore()